<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pureWhite"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/agreement_explanation"
            android:textColor="@android:color/black"
            style="@style/TextAppearance.AppCompat.Display2"
            android:textSize="18sp"
            android:layout_marginLeft="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@android:color/black"
            style="@style/TextAppearance.AppCompat.Display2"
            android:textSize="16sp"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/agreement_first"
            android:textColor="@android:color/black"
            style="@style/TextAppearance.AppCompat.Display2"
            android:textSize="16sp"
            android:layout_marginLeft="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/agreement_second"
            android:textColor="@android:color/black"
            style="@style/TextAppearance.AppCompat.Display2"
            android:textSize="16sp"
            android:layout_marginLeft="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/agreement_third"
            android:textColor="@android:color/black"
            style="@style/TextAppearance.AppCompat.Display2"
            android:textSize="16sp"
            android:layout_marginLeft="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/agreement_fourth"
            android:textColor="@android:color/black"
            style="@style/TextAppearance.AppCompat.Display2"
            android:textSize="16sp"
            android:layout_marginLeft="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:textAlignment="center"/>
    </LinearLayout>

    <Button
        android:id="@+id/button_accept_terms"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:padding="4dp"
        android:text="@string/agreement_button"
        android:textColor="@android:color/white"
        android:textSize="14sp" />

</RelativeLayout>