<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:id="@+id/scrollView"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <LinearLayout
            android:layout_marginTop="20dp"
            android:id="@+id/ll_login"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_centerInParent="true"
            android:focusableInTouchMode="true">

            <ImageView
                android:paddingStart="40dp"
                android:paddingEnd="40dp"
                android:paddingBottom="12dp"
                android:paddingTop="12dp"
                android:layout_marginBottom="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@mipmap/winhawillelogo"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="-12dp"
                    android:layout_marginEnd="-16dp"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_person"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <android.support.design.widget.TextInputEditText
                            android:maxLines="1"
                            android:layout_margin="20dp"
                            android:id="@+id/input_username"
                            android:imeOptions="actionDone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="20sp"
                            android:inputType="text"
                            android:hint="@string/username" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.v7.widget.AppCompatCheckBox
                        android:id="@+id/cbUsername"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="-20dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/remember_username"
                        android:checked="true"
                        style="@style/Base.Widget.AppCompat.CompoundButton.CheckBox"/>
                </LinearLayout>

            </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <ImageView
            android:padding="-4dp"
            android:tint="@color/drawableGray"
            android:rotation="90"
            android:scaleX="1"
            android:scaleY="-1"
            android:layout_marginStart="8dp"
            android:layout_marginTop="-12dp"
            android:layout_marginEnd="-20dp"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_password_key"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_marginTop="0dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:maxLines="1"
                    android:layout_margin="20dp"
                    android:id="@+id/input_password"
                    android:imeOptions="actionDone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:inputType="textPassword"
                    android:hint="@string/password" />

            </android.support.design.widget.TextInputLayout>


            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/cbPassword"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="-20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/remember_password"
                android:checked="true"
                style="@style/Base.Widget.AppCompat.CompoundButton.CheckBox"/>
        </LinearLayout>

        </LinearLayout>

            <android.support.v7.widget.AppCompatButton
                android:layout_marginTop="4dp"
                android:id="@+id/b_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:text="@string/login"
                android:textSize="16sp"
                android:layout_margin="16dp"
                android:padding="20dp"
                style="@style/Base.Widget.AppCompat.Button.Colored"/>

            <com.tolstykh.textviewrichdrawable.TextViewRichDrawable
                app:compoundDrawableHeight="36dp"
                app:compoundDrawableWidth="36dp"
                android:padding="8dp"
                android:layout_margin="8dp"
                app:drawableTint="@color/extrasGoldColor"
                android:id="@+id/error_view"
                android:layout_marginTop="40dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Base.TextAppearance.AppCompat.Display1"
                android:textColor="@android:color/black"
                android:textSize="18sp"/>


            <RelativeLayout
                android:layout_marginTop="20dp"
                android:id="@+id/rl_loading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tvLoadingInfo"
                    android:layout_centerHorizontal="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textColor="@android:color/black"
                    android:text="@string/winha_please_wait"
                    style="@style/Base.TextAppearance.AppCompat.Display1"/>

                <ProgressBar
                    android:layout_marginTop="80dp"
                    android:layout_centerInParent="true"
                    android:layout_width="80dp"
                    android:layout_height="80dp" />

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:visibility="gone"
            android:id="@+id/ll_results"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_centerInParent="true">

            <TextView
                android:layout_marginTop="20dp"
                android:id="@+id/tv_results_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="28sp"
                android:textColor="@android:color/black"
                android:text="@string/results"
                style="@style/Base.TextAppearance.AppCompat.Display1" />

            <LinearLayout
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <android.support.v7.widget.AppCompatImageView
                        android:layout_margin="8dp"
                        android:tint="@color/theme_accent"
                        android:src="@drawable/ic_double_rings"
                        android:layout_width="156dp"
                        android:layout_height="156dp" />

                    <LinearLayout
                        android:layout_centerInParent="true"
                        android:gravity="center"
                        android:padding="16dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:textColor="@android:color/black"
                            android:text="@string/gpa"
                            style="@style/Base.TextAppearance.AppCompat.Display1" />
                        <TextView
                            android:id="@+id/tv_gpa"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="40sp"
                            android:textColor="@android:color/black"
                            android:text="4.20"
                            style="@style/Base.TextAppearance.AppCompat.Display1" />
                    </LinearLayout>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <android.support.v7.widget.AppCompatImageView
                        android:layout_margin="8dp"
                        android:tint="@color/orange"
                        android:src="@drawable/ic_double_rings"
                        android:layout_width="156dp"
                        android:layout_height="156dp" />

                    <LinearLayout
                        android:layout_centerInParent="true"
                        android:gravity="center"
                        android:padding="16dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:textColor="@android:color/black"
                            android:text="@string/credits"
                            style="@style/Base.TextAppearance.AppCompat.Display1" />
                        <TextView
                            android:id="@+id/tv_credits"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="40sp"
                            android:textColor="@android:color/black"
                            android:text="1337"
                            style="@style/Base.TextAppearance.AppCompat.Display1" />
                    </LinearLayout>

                </RelativeLayout>

            </LinearLayout>

            <com.github.mikephil.charting.charts.BarChart
                android:layout_margin="4dp"
                android:id="@+id/graph"
                android:layout_width="match_parent"
                android:layout_height="200dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_alignParentStart="true"
                    android:layout_alignParentBottom="true"
                    android:padding="4dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@android:color/black"
                    android:text="@string/winha_courses"
                    style="@style/Base.TextAppearance.AppCompat.Display1" />

                <TextView
                    android:layout_toStartOf="@id/spinner"
                    android:layout_marginEnd="-2dp"
                    android:padding="4dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@android:color/black"
                    android:layout_alignParentBottom="true"
                    android:text="@string/sort"
                    style="@style/Base.TextAppearance.AppCompat.Display1" />

                <android.support.v7.widget.AppCompatSpinner
                    android:layout_margin="4dp"
                    android:padding="4dp"
                    android:layout_alignParentBottom="true"
                    android:background="@color/winhaRed"
                    android:id="@+id/spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"/>

            </RelativeLayout>

            <include layout="@layout/view_line_slim"/>

            <android.support.v7.widget.RecyclerView
                android:nestedScrollingEnabled="false"
                android:id="@+id/rv_courses"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </android.support.v7.widget.RecyclerView>

        </LinearLayout>

    </RelativeLayout>
</ScrollView>